[gd_scene load_steps=28 format=2]

[ext_resource path="res://resource/images/play_menu_images/bg_play_menu.png" type="Texture" id=1]
[ext_resource path="res://resource/images/main_menu_images/mute_button.png" type="Texture" id=2]
[ext_resource path="res://resource/images/main_menu_images/sound_logo.png" type="Texture" id=3]
[ext_resource path="res://resource/images/main_menu_images/container_sound.png" type="Texture" id=4]
[ext_resource path="res://resource/images/play_menu_images/pattern_container.png" type="Texture" id=5]
[ext_resource path="res://scripts/ui_scripts/redirect_play_menu.gd" type="Script" id=6]
[ext_resource path="res://scripts/ui_scripts/play_menu_button.gd" type="Script" id=7]
[ext_resource path="res://resource/images/play_menu_images/back_button.png" type="Texture" id=8]
[ext_resource path="res://scripts/ui_scripts/back_button.gd" type="Script" id=9]
[ext_resource path="res://scripts/ui_scripts/mute_button.gd" type="Script" id=10]
[ext_resource path="res://resource/images/play_menu_images/mini_matrix.png" type="Texture" id=11]
[ext_resource path="res://resource/images/play_menu_images/mini_star.png" type="Texture" id=12]
[ext_resource path="res://resource/images/play_menu_images/mini_web.png" type="Texture" id=13]
[ext_resource path="res://resource/images/play_menu_images/mini_random.png" type="Texture" id=14]
[ext_resource path="res://scripts/ui_scripts/mode_selector.gd" type="Script" id=15]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1

[sub_resource type="DynamicFontData" id=2]
font_path = "res://resource/font/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://resource/font/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://resource/font/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 90
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://resource/font/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://resource/font/Born2bSportyV2.ttf"

[sub_resource type="DynamicFont" id=12]
size = 45
font_data = SubResource( 11 )

[node name="bg_play_menu" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="back_container" type="TextureRect" parent="."]
margin_left = -6.0
margin_top = -1.0
margin_right = 1928.0
margin_bottom = 111.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_logos" type="HBoxContainer" parent="back_container"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1700
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="back_container/back_logos"]
margin_left = 85.0
margin_right = 148.0
margin_bottom = 112.0

[node name="sound_logo" type="TextureRect" parent="back_container/back_logos/CenterContainer"]
margin_top = 34.0
margin_right = 63.0
margin_bottom = 78.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="back_container/back_logos/CenterContainer/sound_logo"]
margin_left = 79.5152
margin_right = 159.515
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="back_container/back_logos/CenterContainer/sound_logo/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_right = 4.0
mouse_default_cursor_shape = 2
flat = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_container/back_logos"]
margin_left = 1848.0
margin_top = 49.0
margin_right = 1848.0
margin_bottom = 63.0

[node name="mode_selector" type="Button" parent="."]
margin_left = 902.0
margin_top = 12.0
margin_right = 1019.0
margin_bottom = 98.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 1.2, 1.2, 1.2, 1 )
enabled_focus_mode = 0
text = "DFS"
flat = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pattern_container" type="VBoxContainer" parent="."]
margin_left = 52.0
margin_top = 150.0
margin_right = 1868.0
margin_bottom = 967.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="pattern_container"]
margin_right = 1816.0
margin_bottom = 393.0
custom_constants/separation = 50

[node name="matrix" type="TextureRect" parent="pattern_container/HBoxContainer"]
margin_right = 880.0
margin_bottom = 393.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="pattern_container/HBoxContainer/matrix"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pattern_container/HBoxContainer/matrix/CenterContainer"]
margin_left = 306.0
margin_top = 65.0
margin_right = 574.0
margin_bottom = 327.0
texture = ExtResource( 11 )

[node name="matrix" type="Button" parent="pattern_container/HBoxContainer/matrix"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 7 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pattern_container/HBoxContainer/matrix/matrix"]
modulate = Color( 1, 0.501961, 1, 1 )
margin_left = 43.4165
margin_top = 255.175
margin_right = 281.416
margin_bottom = 355.175
custom_fonts/font = SubResource( 8 )
text = "Matrix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_time" type="Label" parent="pattern_container/HBoxContainer/matrix/matrix"]
margin_left = 650.0
margin_top = 290.0
margin_right = 818.0
margin_bottom = 330.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.909804, 0.839216, 0.105882, 1 )
text = "Best Time: NA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star" type="TextureRect" parent="pattern_container/HBoxContainer"]
margin_left = 930.0
margin_right = 1810.0
margin_bottom = 393.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="pattern_container/HBoxContainer/star"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pattern_container/HBoxContainer/star/CenterContainer"]
margin_left = 297.0
margin_top = 52.0
margin_right = 583.0
margin_bottom = 341.0
texture = ExtResource( 12 )

[node name="star" type="Button" parent="pattern_container/HBoxContainer/star"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 7 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pattern_container/HBoxContainer/star/star"]
modulate = Color( 1, 1, 0.5, 1 )
margin_left = 43.4165
margin_top = 255.175
margin_right = 281.416
margin_bottom = 355.175
custom_fonts/font = SubResource( 8 )
text = "Star"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_time" type="Label" parent="pattern_container/HBoxContainer/star/star"]
margin_left = 650.0
margin_top = 290.0
margin_right = 818.0
margin_bottom = 330.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.909804, 0.839216, 0.105882, 1 )
text = "Best Time: NA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="pattern_container"]
margin_top = 403.0
margin_right = 1816.0
margin_bottom = 796.0
custom_constants/separation = 50

[node name="web" type="TextureRect" parent="pattern_container/HBoxContainer2"]
margin_right = 880.0
margin_bottom = 393.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="pattern_container/HBoxContainer2/web"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pattern_container/HBoxContainer2/web/CenterContainer"]
margin_left = 311.0
margin_top = 54.0
margin_right = 569.0
margin_bottom = 338.0
texture = ExtResource( 13 )

[node name="web" type="Button" parent="pattern_container/HBoxContainer2/web"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 7 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pattern_container/HBoxContainer2/web/web"]
modulate = Color( 0.5, 0.5, 1, 1 )
margin_left = 43.4165
margin_top = 255.175
margin_right = 281.416
margin_bottom = 355.175
custom_fonts/font = SubResource( 8 )
text = "Web"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_time" type="Label" parent="pattern_container/HBoxContainer2/web/web"]
margin_left = 650.0
margin_top = 290.0
margin_right = 818.0
margin_bottom = 330.0
grow_horizontal = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.909804, 0.839216, 0.105882, 1 )
text = "Best Time: NA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random" type="TextureRect" parent="pattern_container/HBoxContainer2"]
margin_left = 930.0
margin_right = 1810.0
margin_bottom = 393.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="pattern_container/HBoxContainer2/random"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="pattern_container/HBoxContainer2/random/CenterContainer"]
margin_left = 290.0
margin_top = 46.0
margin_right = 590.0
margin_bottom = 346.0
texture = ExtResource( 14 )

[node name="random" type="Button" parent="pattern_container/HBoxContainer2/random"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 7 )
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pattern_container/HBoxContainer2/random/random"]
modulate = Color( 0.5, 1, 0.5, 1 )
margin_left = 43.4165
margin_top = 255.175
margin_right = 319.416
margin_bottom = 355.175
custom_fonts/font = SubResource( 8 )
text = "Random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_container" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = 970.01
margin_right = 1921.0
margin_bottom = 1082.01
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="song_label" type="Label" parent="sound_container"]
margin_left = 150.0
margin_top = 33.0
margin_right = 588.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 12 )
text = "LOREM IPSUM LOREM IPSUM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_logos" type="HBoxContainer" parent="sound_container"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1700
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="sound_container/sound_logos"]
margin_left = 69.0
margin_right = 117.0
margin_bottom = 112.0

[node name="logo_musicname" type="HBoxContainer" parent="sound_container/sound_logos/CenterContainer"]
margin_top = 32.0
margin_right = 48.0
margin_bottom = 80.0
custom_constants/separation = 40

[node name="sound_logo" type="TextureRect" parent="sound_container/sound_logos/CenterContainer/logo_musicname"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 3 )

[node name="CenterContainer2" type="CenterContainer" parent="sound_container/sound_logos"]
margin_left = 1817.0
margin_right = 1852.0
margin_bottom = 112.0

[node name="mute_logo" type="TextureRect" parent="sound_container/sound_logos/CenterContainer2"]
margin_top = 38.0
margin_right = 35.0
margin_bottom = 73.0
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="sound_container/sound_logos/CenterContainer2/mute_logo"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
